reverted getFirst -> get(0)